disintegration refactor